feat: complete five-task reliability, distribution, and governance upgrades

--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -60,6 +60,7 @@
 
       <section class="panel" aria-labelledby="status-title">
         <h2 id="status-title">System Status</h2>
+        <div id="runtime-status" class="runtime-grid" aria-live="polite"></div>
         <pre id="health" class="code-block"></pre>
       </section>
 
