feat: adapt wake-word learning and humanize dashboard events

--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -134,7 +134,7 @@
 
       <section class="panel" aria-labelledby="events-title">
         <h2 id="events-title">Live Event Stream</h2>
-        <p class="panel-intro">Recent event flow to debug wake, bridge, and spoken-response timing in real time.</p>
+        <p class="panel-intro">Recent activity in plain language so you can track wake detection, learned wake phrases, and spoken replies. Add <code>?debug=1</code> to the URL for raw developer event codes.</p>
         <ul id="events" class="event-feed"></ul>
       </section>
     </main>
